# IntSeqBERT

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  reproduction_test.py
.claude/: settings.json
experiment/cicm2026/: fig1_architecture.py  fig2_nig_spectrum.py  fig2b_nig_vs_phi.py  fig3_scaling.py  fig4_learning_curves.py  fig4b_train_val_curves.py  fig5_magnitude_scatter.py  fig6_calibration.py  plan.md  result.md
paper/2026-03/: main.tex  references.bib
paper/cicm2026/: 01_introduction.md  02_background.md  03_model.md  04_setup.md  05_experiments.md  main.tex  (+3 more)
plan/: analysis_plan.md  experiments.md  model_refinement.md  todo.md
spec/: ablation_models.md  analysis.md  analyze_attention.md  analyze_cases.md  analyze_magnitude.md  analyze_magnitude_ext.md  analyze_mod_spectrum.md  analyze_solver.md  base_models.md  collator.md  features.md  intseq_models.md  loader.md  models.md  preprocess.md  schemas.md  solver.md  todo.md  train.md  training_log.md  vanilla_models.md
tests/: test_ablation_models.py  test_analyze_attention.py  test_analyze_cases.py  test_analyze_magnitude.py  test_analyze_mod_spectrum.py  test_analyze_solver.py  test_base_models.py  test_bert_model.py  test_collator.py  test_collect_paper_data.py  test_converters.py  test_dataset.py  test_decoder_model.py  test_encoder.py  test_evaluate_final.py  test_features.py  test_intseq_models.py  test_loader.py  test_model.py  test_models.py  test_preprocess.py  test_schemas.py  test_solver.py  test_train.py  test_train_bert.py  test_train_decoder.py  test_utils.py  test_vanilla_models.py
(+131 files in other folders)
