[project]
name = "intseq-bert"
version = "0.1.0"
description = "A Neuro-Symbolic Bidirectional Transformer for OEIS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "sympy>=1.14.0",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intseq_bert"]